tests/rosetta/out/Haskell/break-oo-privacy.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/break-oo-privacy.hs:13:5: error:
    parse error on input ‘Exported’
   |
13 |     Exported :: Int,
   |     ^^^^^^^^
